--- a/INTEGRATED_POWER_CALCULATOR_LTE.ipynb
+++ b/INTEGRATED_POWER_CALCULATOR_LTE.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = glob.glob('Asia/*csv')"
+    "data = glob.glob('Path of the outputs from the select by location scriptt')"
    ]
   },
   {
